Added Parallax to the banners and edited size

--- a/about/index.html
+++ b/about/index.html
@@ -38,62 +38,64 @@
 			<img src="/images/DSC00159.jpg">
 			<h1>About Me</h1>
 		</div>
-		<!--About me-->
-		<div class="box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			<div class="text">
-				<h2>About me</h2>
-				<span>
-					I'm Emil (17), I live in Norway. My hobbies include playing/making games and making websites such as this. 
-					When it comes to non important things like my hobby projects I would not be what you would consider a productive guy.
-					I often get distracted by other things and often leave project half finished. 
-					My project are for my own enjoyment (I like to have project to work on when I'm bored) 
-					and to show friends and family if they are intrested. I am also always eager to help my friends with their projects.
-					I love to learn and this is the main drive force behind most my projects.
-				</span>
+		<div class="content">
+			<!--About me-->
+			<div class="box">
+				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+				<div class="text">
+					<h2>About me</h2>
+					<span>
+						I'm Emil (17), I live in Norway. My hobbies include playing/making games and making websites such as this. 
+						When it comes to non important things like my hobby projects I would not be what you would consider a productive guy.
+						I often get distracted by other things and often leave project half finished. 
+						My project are for my own enjoyment (I like to have project to work on when I'm bored) 
+						and to show friends and family if they are intrested. I am also always eager to help my friends with their projects.
+						I love to learn and this is the main drive force behind most my projects.
+					</span>
+				</div>
 			</div>
-		</div>
-		<!--Background-->
-		<div class="box">
-			<div class="text">
-				<span>
-					I have from a yong age enjoyed video games and anything computer related. I used to tinker around with bash script just making small 
-					terminal programs. I mostly did this to cure my boredom in school. Bash isn't the best language to make games or even programs for that matter, 
-					but I just liked the fact I could just open notepad and start typing. I have also done a lot of Minecraft command block "programming" where
-					I made cool datapacks for me and my friends. My first real programming language I learned where python, where I quickly got drawn towards
-					game development. I have gone to school for IT but most of my programming skills comes from my freetime. I have made countless games
-					on my freetime, most lost to time. I have a github repository where I try to gather all the games I can find in one central place. Most my games
-					are written from the ground up where I make my own "game engine", but I also have some experience in unity.
-				</span>
+			<!--Background-->
+			<div class="box">
+				<div class="text">
+					<span>
+						I have from a yong age enjoyed video games and anything computer related. I used to tinker around with bash script just making small 
+						terminal programs. I mostly did this to cure my boredom in school. Bash isn't the best language to make games or even programs for that matter, 
+						but I just liked the fact I could just open notepad and start typing. I have also done a lot of Minecraft command block "programming" where
+						I made cool datapacks for me and my friends. My first real programming language I learned where python, where I quickly got drawn towards
+						game development. I have gone to school for IT but most of my programming skills comes from my freetime. I have made countless games
+						on my freetime, most lost to time. I have a github repository where I try to gather all the games I can find in one central place. Most my games
+						are written from the ground up where I make my own "game engine", but I also have some experience in unity.
+					</span>
+				</div>
+				<img src="/images/greg-code.png">
 			</div>
-			<img src="/images/greg-code.png">
-		</div>
-		<!--text-->
-		<div class="box">
-			<img src="/images/DSC00159.jpg">
-			<div class="text">
-				<span>
-					I have many things left I want to learn and do, so my todo list will never be empty. I have always something I can do.
-					I can use days just fiksing a small physics bug in a game no one is ever going to play outsiside my closest friend group,
-					but I don't care. The end goal isn't why I do it. I make games and websides because I enjoy the prosess of making them.
-					I also have some friends that like to see what I am making so as a bonus I get to share my work with them.
-				</span>
+			<!--text-->
+			<div class="box">
+				<img src="/images/DSC00159.jpg">
+				<div class="text">
+					<span>
+						I have many things left I want to learn and do, so my todo list will never be empty. I have always something I can do.
+						I can use days just fiksing a small physics bug in a game no one is ever going to play outsiside my closest friend group,
+						but I don't care. The end goal isn't why I do it. I make games and websides because I enjoy the prosess of making them.
+						I also have some friends that like to see what I am making so as a bonus I get to share my work with them.
+					</span>
+				</div>
 			</div>
-		</div>
-        <!--Footer-->
-		<div class="footer">
-			<span>Powered by: Me</span>
-			<small>I wrote it by hand</small>
-			<div class="socials">
-				<span>Contact me:</span>
-				<a href="https://twitter.com/EmilBjorkeng">
-					<i class="fa fa-twitter"></i>
-				</a>
-				<a href="https://github.com/EmilBjorkeng">
-					<i class="fa fa-github"></i>
-				</a>
-			</div>
-			<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
+			<!--Footer-->
+			<div class="footer">
+				<span>Powered by: Me</span>
+				<small>I wrote it by hand</small>
+				<div class="socials">
+					<span>Contact me:</span>
+					<a href="https://twitter.com/EmilBjorkeng">
+						<i class="fa fa-twitter"></i>
+					</a>
+					<a href="https://github.com/EmilBjorkeng">
+						<i class="fa fa-github"></i>
+					</a>
+				</div>
+				<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
+			</div>			
 		</div>
     </body>
 </html>
