--- a/index.html
+++ b/index.html
@@ -41,72 +41,74 @@
 				<div class="arrow-down"></div>
 			</a>
 		</div>
-		<div class="col-div">
-			<h1 class="col-title">What I have and still am working on</h1>
-			<!--Collection-->
-			<ul class="col">
-				<li>
-					<a href="/projects/gregs-adventure/">
-						<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
-						<h3>Greg's Adventure</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-			</ul>	
-		</div>
-		<hr class="faded-hr">
-		<!--About me-->
-		<div class="box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			<div class="text">
-				<h2>About me</h2>
-				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-				<a href="">Read more</a>
+		<div class="content">
+			<div class="col-div">
+				<h1 class="col-title">What I have and still am working on</h1>
+				<!--Collection-->
+				<ul class="col">
+					<li>
+						<a href="/projects/gregs-adventure/">
+							<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
+							<h3>Greg's Adventure</h3>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+							<h3>Text</h3>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+							<h3>Text</h3>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+							<h3>Text</h3>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+							<h3>Text</h3>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+							<h3>Text</h3>
+						</a>
+					</li>
+				</ul>	
 			</div>
-		</div>
-		<!--Footer-->
-		<div class="footer">
-			<span>Powered by: Me</span>
-			<small>I wrote it by hand</small>
-			<div class="socials">
-				<span>Contact me:</span>
-				<a href="https://twitter.com/EmilBjorkeng">
-					<i class="fa fa-twitter"></i>
-				</a>
-				<a href="https://github.com/EmilBjorkeng">
-					<i class="fa fa-github"></i>
-				</a>
+			<hr class="faded-hr">
+			<!--About me-->
+			<div class="box">
+				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+				<div class="text">
+					<h2>About me</h2>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
+					<a href="">Read more</a>
+				</div>
 			</div>
-			<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
+			<!--Footer-->
+			<div class="footer">
+				<span>Powered by: Me</span>
+				<small>I wrote it by hand</small>
+				<div class="socials">
+					<span>Contact me:</span>
+					<a href="https://twitter.com/EmilBjorkeng">
+						<i class="fa fa-twitter"></i>
+					</a>
+					<a href="https://github.com/EmilBjorkeng">
+						<i class="fa fa-github"></i>
+					</a>
+				</div>
+				<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
+			</div>	
 		</div>
 	</body>
 </html>
