Edited Arrow on main page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 		<div class="banner">
 			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			<h1>Student and freetime programmer</h1>
-			<a onclick="window.scroll({top:innerHeight, left:0, behavior:'smooth'})" class="arrow">
-				<div class="arrow-down"></div>
-			</a>
+			<a onclick="window.scroll({top:innerHeight, left:0, behavior:'smooth'})" class="arrow"></a>
 		</div>
 		<div class="content">
 			<div class="col-div">
