--- a/projects/gregs-adventure/index.html
+++ b/projects/gregs-adventure/index.html
@@ -38,31 +38,33 @@
 			<img src="/images/gregs-adventure-banner.png">
 			<h1>Greg's Adventure</h1>
 		</div>
-		<!--The Code-->
-		<div class="box">
-			<div class="img-container">
-				<img class="h" src="/images/greg-code.png" alt="Some code from Gregs adventure">
+		<div class="content">
+			<!--The Code-->
+			<div class="box">
+				<div class="img-container">
+					<img class="h" src="/images/greg-code.png" alt="Some code from Gregs adventure">
+				</div>
+				<!--Text part-->
+				<div class="text">
+					<h2>About the code</h2>
+					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
+				</div>
+			</div>			
+			<!--Footer-->
+			<div class="footer">
+				<span>Powered by: Me</span>
+				<small>I wrote it by hand</small>
+				<div class="socials">
+					<span>Contact me:</span>
+					<a href="https://twitter.com/EmilBjorkeng">
+						<i class="fa fa-twitter"></i>
+					</a>
+					<a href="https://github.com/EmilBjorkeng">
+						<i class="fa fa-github"></i>
+					</a>
+				</div>
+				<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
 			</div>
-			<!--Text part-->
-			<div class="text">
-				<h2>About the code</h2>
-				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-			</div>
-		</div>
-		<!--Footer-->
-		<div class="footer">
-			<span>Powered by: Me</span>
-			<small>I wrote it by hand</small>
-			<div class="socials">
-				<span>Contact me:</span>
-				<a href="https://twitter.com/EmilBjorkeng">
-					<i class="fa fa-twitter"></i>
-				</a>
-				<a href="https://github.com/EmilBjorkeng">
-					<i class="fa fa-github"></i>
-				</a>
-			</div>
-			<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
 		</div>
     </body>
 </html>
