--- a/projects/index.html
+++ b/projects/index.html
@@ -40,71 +40,46 @@
 			<h1>My Projects</h1>
 		</div>
 		<div class="content">
-			<!--Greg's Adventure-->
-			<div class="box">
-				<!--Text part-->
-				<div class="text">
-					<h2>Greg's Adventure</h2>
-					<span>Greg's Adventure is a small project I am working on for fun. I wanted to try out some pixel art so I made a fun little character (Greg) and a friend of mine was like "You have to make a game out of that". So I did. I decided to make it in Python with Pygame because its quite easy. I made my own "game engine" with my own screne manager because I like making things like that. The project is partly a meme and partly a way for me to have a hobby project to work on when I am bored. I also get the chance to make "advanced" things like the scene manager.</span>
-					<a href="/projects/gregs-adventure/">Read more</a>
-				</div>
-				<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
-			</div>
-			<hr class="faded-hr">
-			<!--Name-->
-			<div class="box">
-				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-				<!--Text part-->
-				<div class="text">
-					<h2>Title</h2>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-					<a href="">Read more</a>
-				</div>
-			</div>
-			<hr class="faded-hr">
-			<!--Name-->
-			<div class="box">
-				<!--Text part-->
-				<div class="text">
-					<h2>Title</h2>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-					<a href="">Read more</a>
-				</div>
-				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			</div>
-			<hr class="faded-hr">
-			<!--Name-->
-			<div class="box">
-				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-				<!--Text part-->
-				<div class="text">
-					<h2>Title</h2>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-					<a href="">Read more</a>
-				</div>
-			</div>
-			<hr class="faded-hr">
-			<!--Name-->
-			<div class="box">
-				<!--Text part-->
-				<div class="text">
-					<h2>Title</h2>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-					<a href="">Read more</a>
-				</div>
-				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			</div>
-			<hr class="faded-hr">
-			<!--Name-->
-			<div class="box">
-				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
-				<!--Text part-->
-				<div class="text">
-					<h2>Title</h2>
-					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-					<a href="">Read more</a>
-				</div>
-			</div>
+			<h1 class="col-title">What I have and still am working on</h1>
+			<!--Collection-->
+			<ul class="col">
+				<li>
+					<a href="/projects/gregs-adventure/">
+						<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
+						<h3>Greg's Adventure</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+			</ul>
 			<!--Footer-->
 			<div class="footer">
 				<span>Powered by: Me</span>
