Added Language switching

--- a/about/index.html
+++ b/about/index.html
@@ -39,6 +39,11 @@
 			<h1>About Me</h1>
 		</div>
 		<div class="content">
+			<form action="mailto:emil.bjorkeng@gmail.com" method="post" enctype="text/plain">
+				text1:<br><input type="text" name="text1"> <br>
+				text2:<br><input type="text" name="text2"><br>
+				<input type="submit" value="Send">
+			 </form>
 			<!--About me-->
 			<div class="box">
 				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
