Switched from language switch to button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	</head>
 	<body>
 		<!--Lang-->
-		<a class="lang-switch" onclick="langSwitch()"></a>
+		<a class="lang-switch en" onclick="langSwitch(true)">EN</a>
+		<a class="lang-switch nb" onclick="langSwitch(false)">NB</a>
 		<!--Menu-->
 		<div class="menu">
 			<a href="/" class="active en">Home</a>
