Added the language switch to the menu

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 		<script type="text/javascript", src="script.js" defer></script>
 	</head>
 	<body>
-		<!--Lang-->
-		<a class="lang-switch en" onclick="langSwitch(true)">EN</a>
-		<a class="lang-switch nb" onclick="langSwitch(false)">NB</a>
 		<!--Menu-->
 		<div class="menu">
 			<a href="/" class="active en">Home</a>
@@ -25,6 +22,8 @@
 			<a href="/projects/" class="nb">Projekter</a>
 			<a href="/about/" class="en">About Me</a>
 			<a href="/about/" class="nb">Om Meg</a>
+			<a href="javascript:langSwitch('nb')" class="en">Norwegian</a>
+			<a href="javascript:langSwitch('en')" class="nb">English</a>
 		</div>
 		<!--Banner-->
 		<div class="banner">
