Fixed linking for the front page

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="/style.css" type="text/css" />
-		<link rel="stylesheet" href="/globalcss/menu.css" type="text/css" />
-		<link rel="stylesheet" href="/globalcss/banner.css" type="text/css" />
+		<link rel="stylesheet" href="/global/menu.css" type="text/css" />
+		<link rel="stylesheet" href="/global/banner.css" type="text/css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-		<script type="text/javascript", src="script.js" defer></script>
+		<script type="text/javascript", src="/global/cookies.js" defer></script>
 	</head>
 	<body>
 		<!--Menu-->
@@ -27,7 +27,7 @@
 		</div>
 		<!--Banner-->
 		<div class="banner">
-			<img src="/images/DSC00198.png">
+			<img src="/images/DSC00198.png" alt="banner">
 			<h1 class="fade-in en">Emil Bjorkeng</h1>
 			<h1 class="fade-in nb">Emil Bjørkeng</h1>
 			<span class="fade-in en">Student and freetime programmer</span>
