--- a/about/index.html
+++ b/about/index.html
@@ -5,16 +5,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>About Me</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-        <link rel="stylesheet" href="/global/general.css" type="text/css">
-		<link rel="stylesheet" href="/global/header.css" type="text/css">
-        <link rel="stylesheet" href="/global/menu.css" type="text/css">
-        <link rel="stylesheet" href="/global/banner.css" type="text/css">
-        <link rel="stylesheet" href="/global/box.css" type="text/css">
-        <link rel="stylesheet" href="/global/footer.css" type="text/css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/global/general.css" type="text/css" />
+        <link rel="stylesheet" href="/global/menu.css" type="text/css" />
+        <link rel="stylesheet" href="/global/banner.css" type="text/css" />
+        <link rel="stylesheet" href="/global/box.css" type="text/css" />
+        <link rel="stylesheet" href="/global/footer.css" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<script type="text/javascript", src="/global/cookies.js" defer></script>
     </head>
     <body>
