Made a div for the banner content

--- a/about/index.html
+++ b/about/index.html
@@ -29,9 +29,11 @@
 			<a href="javascript:langSwitch('en')" class="nb">English</a>
 		</div>
         <!--Small Banner-->
-		<div class="banner small-banner">
+		<div class="bnr sml-bnr">
 			<img src="/images/DSC00159.jpg">
-			<h1>About Me</h1>
+			<div class="bnr-content">
+				<h1>About Me</h1>
+			</div>
 		</div>
 		<div class="content">
 			<!--About me-->
