--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 			<a href="javascript:langSwitch('en')" class="nb">English</a>
 		</div>
 		<!--Banner-->
-		<div class="banner">
+		<div class="bnr">
 			<img src="/images/DSC00198.png" alt="banner">
-			<h1 class="fade-in en">Emil Bjorkeng</h1>
-			<h1 class="fade-in nb">Emil Bjørkeng</h1>
-			<span class="fade-in en">Student and freetime programmer</span>
-			<span class="fade-in nb">Student og fritids programmerer</span>
+			<div class="bnr-content">
+				<h1 class="fade-in en">Emil Bjorkeng</h1>
+				<h1 class="fade-in nb">Emil Bjørkeng</h1>
+				<span class="fade-in en">Student and freetime programmer</span>
+				<span class="fade-in nb">Student og fritids programmerer</span>				
+			</div>
 		</div>
 	</body>
 </html>
