--- a/projects/gregs-adventure/index.html
+++ b/projects/gregs-adventure/index.html
@@ -29,9 +29,11 @@
 			<a href="javascript:langSwitch('en')" class="nb">English</a>
 		</div>
         <!--Small Banner-->
-		<div class="banner small-banner">
+		<div class="bnr sml-bnr">
 			<img src="/images/gregs-adventure-banner.png">
-			<h1>Greg's Adventure</h1>
+			<div class="bnr-content">
+				<h1>Greg's Adventure</h1>	
+			</div>
 		</div>
 		<div class="content">
 			<!--The Code-->
