--- a/projects/index.html
+++ b/projects/index.html
@@ -30,9 +30,11 @@
 			<a href="javascript:langSwitch('en')" class="nb">English</a>
 		</div>
         <!--Small Banner-->
-		<div class="banner small-banner">
+		<div class="bnr sml-bnr">
 			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			<h1>My Projects</h1>
+			<div class="bnr-content">
+				<h1>My Projects</h1>
+			</div>
 		</div>
 		<div class="content">
 			<h1 class="col-title">What I have and still am working on</h1>
