--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,7 @@
 		<title>My Projects</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="/projects/style.css" type="text/css" />
+		<link rel="stylesheet" href="/projects/snake.css" type="text/css" />
         <link rel="stylesheet" href="/global/general.css" type="text/css" />
         <link rel="stylesheet" href="/global/menu.css" type="text/css" />
         <link rel="stylesheet" href="/global/banner.css" type="text/css" />
@@ -16,6 +17,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<script type="text/javascript", src="/global/cookies.js" defer></script>
+		<script type="text/javascript", src="./snake.js" defer></script>
     </head>
     <body>
 		<!--Menu-->
@@ -41,9 +43,10 @@
 			<!--Collection-->
 			<ul class="col">
 				<li>
-					<a href="/projects/gregs-adventure/">
-						<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
-						<h3>Greg's Adventure</h3>
+					<a href="javascript:startSnake()">
+						<!--Temp Image-->
+						<img src="//external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc1.staticflickr.com%2F3%2F2624%2F3996678334_171874d29f_b.jpg&f=1&nofb=1">
+						<h3>Snake Game</h3>
 					</a>
 				</li>
 				<li>
