Removed Project and added Experience page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<div class="menu">
 			<a href="/" class="active en">Home</a>
 			<a href="/" class="active nb">Hjem</a>
-			<a href="/projects/" class="en">Projects</a>
-			<a href="/projects/" class="nb">Projekter</a>
+			<a href="/experience/" class="en">Experience</a>
+			<a href="/experience/" class="nb">Erfaring</a>
 			<a href="/about/" class="en">About Me</a>
 			<a href="/about/" class="nb">Om Meg</a>
-			<a href="javascript:langSwitch('nb')" class="en">Norwegian</a>
-			<a href="javascript:langSwitch('en')" class="nb">English</a>
+			<a href="javascript:langSwitch('nb')" class="en">NB</a>
+			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
 		<!--Banner-->
 		<div class="bnr">
