--- a/about/index.html
+++ b/about/index.html
@@ -21,12 +21,12 @@
 		<div class="menu">
 			<a href="/" class="en">Home</a>
 			<a href="/" class="nb">Hjem</a>
-			<a href="/projects/" class="en">Projects</a>
-			<a href="/projects/" class="nb">Projekter</a>
+			<a href="/experience/" class="en">Experience</a>
+			<a href="/experience/" class="nb">Erfaring</a>
 			<a href="/about/" class="active en">About Me</a>
 			<a href="/about/" class="active nb">Om Meg</a>
-			<a href="javascript:langSwitch('nb')" class="en">Norwegian</a>
-			<a href="javascript:langSwitch('en')" class="nb">English</a>
+			<a href="javascript:langSwitch('nb')" class="en">NB</a>
+			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
         <!--Small Banner-->
 		<div class="bnr sml-bnr">
