--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-		<script type="text/javascript", src="/global/cookies.js" defer></script>
+		<script type="text/javascript", src="/global/script.js" defer></script>
     </head>
     <body>
 		<!--Menu-->
