--- a/experience/index.html
+++ b/experience/index.html
@@ -12,7 +12,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-		<script type="text/javascript", src="/global/cookies.js" defer></script>
+		<script type="text/javascript", src="/global/script.js" defer></script>
     </head>
     <body>
 		<!--Menu-->
@@ -26,37 +26,81 @@
 			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
-        <img src="/images/tempimage_from_wix.webp" class="bnr">
+		<div class="img-wrap">
+			<img src="/images/mountain.jpg" class="bg-img">
+		</div>
 		<ul class="timeline">
-			<li class="point" style="top: 0%">
-				<h4>2000-2010</h4>
-				<h2>Skole</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab voluptas suscipit vero temporibus. Est dignissimos consectetur deserunt quae soluta. Animi ab placeat error? Corrupti iusto, maxime similique possimus aliquid odio. Ad qui accusamus, itaque quod earum quibusdam iste libero doloremque natus excepturi repellendus recusandae, asperiores beatae, rem laudantium tenetur?</p>
+			<li class="point" tabindex="0" style="top: 0%">
+				<h4 class="en">2022-</h4>
+				<h2 class="en">UiT-The arctic university of Norway</h2>
+				<p class="en">Aprentice IT support</p>
+				<h4 class="nb">2022-d.d</h4>
+				<h2 class="nb">UiT-Norges arktiske universitet</h2>
+				<p class="nb">Lærling IT support</p>
 			</li>
-			<li class="point point-left" style="top: 20%">
-				<h4>2000-2010</h4>
-				<h2>Skole</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab voluptas suscipit vero temporibus. Est dignissimos consectetur deserunt quae soluta. Animi ab placeat error? Corrupti iusto, maxime similique possimus aliquid odio. Ad qui accusamus, itaque quod earum quibusdam iste libero doloremque natus excepturi repellendus recusandae, asperiores beatae, rem laudantium tenetur?</p>
+			<li class="point point-left" tabindex="0" style="top: 16.68%">
+				<h4 class="en">2022</h4>
+				<h2 class="en">Ramsalt</h2>
+				<p class="en">Professional practice</p>
+				<h4 class="nb">2022</h4>
+				<h2 class="nb">Ramsalt</h2>
+				<p class="nb">Yrkespraksis</p>
 			</li>
-			<li class="point" style="top: 40%">
-				<h4>2000-2010</h4>
-				<h2>Skole</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab voluptas suscipit vero temporibus. Est dignissimos consectetur deserunt quae soluta. Animi ab placeat error? Corrupti iusto, maxime similique possimus aliquid odio. Ad qui accusamus, itaque quod earum quibusdam iste libero doloremque natus excepturi repellendus recusandae, asperiores beatae, rem laudantium tenetur?</p>
+			<li class="point" tabindex="0" style="top: 33.34%">
+				<h4 class="en">2021</h4>
+				<h2 class="en">Tromso kommune, section for IT</h2>
+				<p class="en">Professional practice</p>
+				<h4 class="nb">2021</h4>
+				<h2 class="nb">Tromsø kommune, sekjon for IT</h2>
+				<p class="nb">Yrkespraksis</p>
 			</li>
-			<li class="point point-left" style="top: 60%">
-				<h4>2000-2010</h4>
-				<h2>Skole</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab voluptas suscipit vero temporibus. Est dignissimos consectetur deserunt quae soluta. Animi ab placeat error? Corrupti iusto, maxime similique possimus aliquid odio. Ad qui accusamus, itaque quod earum quibusdam iste libero doloremque natus excepturi repellendus recusandae, asperiores beatae, rem laudantium tenetur?</p>
+			<li class="point point-left" tabindex="0" style="top: 50%">
+				<h4 class="en">August 2020-June 2022</h4>
+				<h2 class="en">Breivang vgs</h2>
+				<p class="en">
+					Information technology and media production vg1,<br>
+					Information technology Vg2
+				</p>
+				<h4 class="nb">August 2020-Juni 2022</h4>
+				<h2 class="nb">Breivang vgs</h2>
+				<p class="nb">
+					Informasjonsteknologi og medieproduksjon vg1,<br>
+					Informasjonsteknologi Vg2
+				</p>
 			</li>
-			<li class="point" style="top: 80%">
-				<h4>2000-2010</h4>
-				<h2>Skole</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab voluptas suscipit vero temporibus. Est dignissimos consectetur deserunt quae soluta. Animi ab placeat error? Corrupti iusto, maxime similique possimus aliquid odio. Ad qui accusamus, itaque quod earum quibusdam iste libero doloremque natus excepturi repellendus recusandae, asperiores beatae, rem laudantium tenetur?</p>
+			<li class="point" tabindex="0" style="top: 66.68%">
+				<h4 class="en">2019</h4>
+				<h2 class="en">Journalist, iTromsø</h2>
+				<p class="en">I was Journalist for iTromsø in a week during pryo-week</p>
+				<h4 class="nb">2019</h4>
+				<h2 class="nb">Journalist, iTromsø</h2>
+				<p class="nb">Jeg var journalist for iTromsø i en uke i pryo-uken</p>
 			</li>
-			<li class="point point-left" style="top: 100%">
-				<h4>2000-2010</h4>
-				<h2>Skole</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab voluptas suscipit vero temporibus. Est dignissimos consectetur deserunt quae soluta. Animi ab placeat error? Corrupti iusto, maxime similique possimus aliquid odio. Ad qui accusamus, itaque quod earum quibusdam iste libero doloremque natus excepturi repellendus recusandae, asperiores beatae, rem laudantium tenetur?</p>
+			<li class="point point-left" tabindex="0" style="top: 83.35%">
+				<h4 class="en">August 2017–June 2020</h4>
+				<h2 class="en">Langnes ungdomsskole</h2>
+				<p class="en">Base Green 2</p>
+				<h4 class="nb">August 2017–Juni 2020</h4>
+				<h2 class="nb">Langnes ungdomsskole</h2>
+				<p class="nb">Base Grønn 2</p>
+			</li>
+			<li class="point" tabindex="0" style="top: 100%">
+				<h4 class="en">2014–2016</h4>
+				<h2 class="en">The technology competition First Lego leauge</h2>
+				<p class="en">
+					2014–2015: Reach the Scandinavian final<br>
+					2015–2016: Reach the international final<br>
+					<br>
+					Gave lectures and presentations in several conferences
+				</p>
+				<h4 class="nb">2014–2016</h4>
+				<h2 class="nb">Teknologikonkurransen First Lego leauge</h2>
+				<p class="nb">
+					2014–2015: Kom til skandinavisk finale<br>
+					2015–2016: Kom til internasjonal finale<br>
+					<br>
+					Holdt foredrag og presentasjon i flere konferanser
+				</p>
 			</li>
 		</ul>
     </body>
