--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-		<script type="text/javascript", src="/global/cookies.js" defer></script>
+		<script type="text/javascript", src="/global/script.js" defer></script>
 	</head>
 	<body>
 		<!--Menu-->
