Small experience page changes

--- a/experience/index.html
+++ b/experience/index.html
@@ -86,7 +86,7 @@
 			</li>
 			<li class="point" tabindex="0" style="top: 100%">
 				<h4 class="en">2014–2016</h4>
-				<h2 class="en">The technology competition First Lego leauge</h2>
+				<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
 				<p class="en">
 					2014–2015: Reach the Scandinavian final<br>
 					2015–2016: Reach the international final<br>
@@ -94,7 +94,7 @@
 					Gave lectures and presentations in several conferences
 				</p>
 				<h4 class="nb">2014–2016</h4>
-				<h2 class="nb">Teknologikonkurransen First Lego leauge</h2>
+				<h2 class="nb">Teknologikonkurransen FIRST LEGO Leauge</h2>
 				<p class="nb">
 					2014–2015: Kom til skandinavisk finale<br>
 					2015–2016: Kom til internasjonal finale<br>
