Cleanup, removed currently unused content

--- a/experience/index.html
+++ b/experience/index.html
@@ -21,8 +21,6 @@
 			<a href="/" class="nb">Hjem</a>
 			<a href="/experience/" class="en">Experience</a>
 			<a href="/experience/" class="nb">Erfaring</a>
-			<a href="/about/" class="en">About Me</a>
-			<a href="/about/" class="nb">Om Meg</a>
 			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
@@ -31,10 +29,10 @@
 		</div>
 		<ul class="timeline">
 			<li class="point" tabindex="0" style="top: 0%">
-				<h4 class="en">2022-</h4>
+				<h4 class="en">August 2022-</h4>
 				<h2 class="en">UiT-The arctic university of Norway</h2>
-				<p class="en">Aprentice IT support</p>
-				<h4 class="nb">2022-d.d</h4>
+				<p class="en">Apprentice IT support</p>
+				<h4 class="nb">August 2022-d.d</h4>
 				<h2 class="nb">UiT-Norges arktiske universitet</h2>
 				<p class="nb">Lærling IT support</p>
 			</li>
