Added more text to the experience page

--- a/experience/index.html
+++ b/experience/index.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>My Projects</title>
-		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
+		<title>Experience</title>
+		<link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="/experience/style.css" type="text/css" />
-        <link rel="stylesheet" href="/global/general.css" type="text/css" />
+		<link rel="stylesheet" href="/global/general.css" type="text/css" />
         <link rel="stylesheet" href="/global/menu.css" type="text/css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<script type="text/javascript", src="/global/script.js" defer></script>
     </head>
     <body>
@@ -19,8 +18,8 @@
 		<div class="menu">
 			<a href="/" class="en">Home</a>
 			<a href="/" class="nb">Hjem</a>
-			<a href="/experience/" class="en">Experience</a>
-			<a href="/experience/" class="nb">Erfaring</a>
+			<a href="/experience/" class="active en">Experience</a>
+			<a href="/experience/" class="active nb">Erfaring</a>
 			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
@@ -29,75 +28,136 @@
 		</div>
 		<ul class="timeline">
 			<li class="point" tabindex="0" style="top: 0%">
+				<!--EN-->
 				<h4 class="en">August 2022-</h4>
 				<h2 class="en">UiT-The arctic university of Norway</h2>
-				<p class="en">Apprentice IT support</p>
+				<p class="en">I am now an apprentice as first-line IT support at UiT.</p>
+				<!--NB-->
 				<h4 class="nb">August 2022-d.d</h4>
 				<h2 class="nb">UiT-Norges arktiske universitet</h2>
-				<p class="nb">Lærling IT support</p>
+				<p class="nb">Jeg er nå lærling som førstelinje IT-support på UiT.</p>
 			</li>
 			<li class="point point-left" tabindex="0" style="top: 16.68%">
+				<!--EN-->
 				<h4 class="en">2022</h4>
 				<h2 class="en">Ramsalt</h2>
-				<p class="en">Professional practice</p>
+				<p class="en">
+					In the second half of vg2 I was at Ramsalt in professional
+					practice. There I learned a little Drupal and made my
+					own home page/blog with it.
+					<br><br>
+					(Write more about Ramslat)
+				</p>
+				<!--NB-->
 				<h4 class="nb">2022</h4>
 				<h2 class="nb">Ramsalt</h2>
-				<p class="nb">Yrkespraksis</p>
+				<p class="nb">
+					I andre halvår av vg2 var jeg på Ramsalt i yrkespraksis. Der
+					jeg fikk lært meg litt Drupal og laget min egen
+					hjemeside/blog med det.
+					<br><br>
+					(Skriv mere om Ramslat)
+				</p>
 			</li>
 			<li class="point" tabindex="0" style="top: 33.34%">
+				<!--EN-->
 				<h4 class="en">2021</h4>
 				<h2 class="en">Tromso kommune, section for IT</h2>
-				<p class="en">Professional practice</p>
+				<p class="en">
+					In the first half of vg2 I was at Tromso kommune in
+					professional practice. There I was doing first-line work such
+					as responding to support tickets in addition to re-installing
+					PCs operating systems.
+				</p>
+				<!--NB-->
 				<h4 class="nb">2021</h4>
-				<h2 class="nb">Tromsø kommune, sekjon for IT</h2>
-				<p class="nb">Yrkespraksis</p>
+				<h2 class="nb">Tromsø kommune, seksjon for IT</h2>
+				<p class="nb">
+					I først halvår av vg2 var jeg på Tromsø kommune i
+					yrkespraksis. Der var jeg i førstelinjen og svarte på support-
+					tickets i tillegg til å tanke/re-installerte PC-er.
+				</p>
 			</li>
 			<li class="point point-left" tabindex="0" style="top: 50%">
+				<!--EN-->
 				<h4 class="en">August 2020-June 2022</h4>
 				<h2 class="en">Breivang vgs</h2>
 				<p class="en">
-					Information technology and media production vg1,<br>
-					Information technology Vg2
+					I went to Breivang vgs, Information technology and
+					media production vg1 and Information technology vg2.
 				</p>
+				<!--NB-->
 				<h4 class="nb">August 2020-Juni 2022</h4>
 				<h2 class="nb">Breivang vgs</h2>
 				<p class="nb">
-					Informasjonsteknologi og medieproduksjon vg1,<br>
-					Informasjonsteknologi Vg2
+					Jeg gikk på Breivang vgs, Informasjonsteknologi og
+					medieproduksjon vg1 og Informasjonsteknologi vg2.
 				</p>
 			</li>
 			<li class="point" tabindex="0" style="top: 66.68%">
+				<!--EN-->
 				<h4 class="en">2019</h4>
 				<h2 class="en">Journalist, iTromsø</h2>
-				<p class="en">I was Journalist for iTromsø in a week during pryo-week</p>
+				<p class="en">
+					I was a journalist for iTromsø during pryo week where I got
+					to work much on my own. I interviewed a friend, was a
+					photographer for a kindergarten (or primary school, must
+					check), interviewed people on the street, etc.
+				</p>
+				<!--NB-->
 				<h4 class="nb">2019</h4>
 				<h2 class="nb">Journalist, iTromsø</h2>
-				<p class="nb">Jeg var journalist for iTromsø i en uke i pryo-uken</p>
+				<p class="nb">
+					Jeg var journalist for iTromsø i pryo-uken der jeg fikk jobbe
+					mye på egenhånd. Jeg intervjuet blandt annet en venn, 
+					var fotograf for en barnehage (eller barneskole, må
+					sjekke), intervjuet folk på gaten, etc.
+				</p>
 			</li>
 			<li class="point point-left" tabindex="0" style="top: 83.35%">
+				<!--EN-->
 				<h4 class="en">August 2017–June 2020</h4>
 				<h2 class="en">Langnes ungdomsskole</h2>
-				<p class="en">Base Green 2</p>
+				<p class="en">
+					I finished Langnes middle school
+					<br><br>
+					(Write more about Langnes)
+				</p>
+				<!--NB-->
 				<h4 class="nb">August 2017–Juni 2020</h4>
 				<h2 class="nb">Langnes ungdomsskole</h2>
-				<p class="nb">Base Grønn 2</p>
+				<p class="nb">
+					Jeg fullførte Langnes ungdomsskole
+					<br><br>
+					(Skriv mere om Langnes)
+				</p>
 			</li>
 			<li class="point" tabindex="0" style="top: 100%">
+				<!--EN-->
 				<h4 class="en">2014–2016</h4>
 				<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
 				<p class="en">
-					2014–2015: Reach the Scandinavian final<br>
-					2015–2016: Reach the international final<br>
-					<br>
-					Gave lectures and presentations in several conferences
+					I participated in FIST LEGO Leaugewhich is a technology 
+					competitionin where you build and program acLego robot
+					in addition to do research projects. in 2014-2015 my team
+					reached the Scandinavian final and in 2015-2016 my team
+					reached the international final. 
+					<br><br>
+					Regarding the competition, I have given lectures and
+					presentation in multiple conferences.
 				</p>
+				<!--NB-->
 				<h4 class="nb">2014–2016</h4>
 				<h2 class="nb">Teknologikonkurransen FIRST LEGO Leauge</h2>
 				<p class="nb">
-					2014–2015: Kom til skandinavisk finale<br>
-					2015–2016: Kom til internasjonal finale<br>
-					<br>
-					Holdt foredrag og presentasjon i flere konferanser
+					Jeg var med i teknologikonkurransen FIST LEGO Leauge
+					som er en konkurranse der du bygger og programmerer en
+					Lego robot i tillegg til å gjøre forskningsprosjekter. i 2014–
+					2015 kom laget mitt til den skandinaviske finalen og i 2015–
+					2016 kom laget mitt til den internasjonale finalen.
+					<br><br>
+					Angående konkurransen har jeg holdt foredrag og
+					presentasjon i flere konferanser.
 				</p>
 			</li>
 		</ul>
