Fixed some Spelling on the experience page

--- a/experience/index.html
+++ b/experience/index.html
@@ -31,7 +31,7 @@
 				<!--EN-->
 				<h4 class="en">August 2022-</h4>
 				<h2 class="en">UiT-The arctic university of Norway</h2>
-				<p class="en">I am now an apprentice as first-line IT support at UiT.</p>
+				<p class="en">I am now an apprentice at first-line IT support at UiT.</p>
 				<!--NB-->
 				<h4 class="nb">August 2022-d.d</h4>
 				<h2 class="nb">UiT-Norges arktiske universitet</h2>
@@ -42,11 +42,11 @@
 				<h4 class="en">2022</h4>
 				<h2 class="en">Ramsalt</h2>
 				<p class="en">
-					In the second half of vg2 I was at Ramsalt in professional
-					practice. There I learned a little Drupal and made my
-					own home page/blog with it.
+					In the second half of vg2, I was at Ramsalt in professional
+					practice. While I was there I learned a little Drupal and
+					made my own home page/blog with it.
 					<br><br>
-					(Write more about Ramslat)
+					(Write more about Ramsalt)
 				</p>
 				<!--NB-->
 				<h4 class="nb">2022</h4>
@@ -56,7 +56,7 @@
 					jeg fikk lært meg litt Drupal og laget min egen
 					hjemeside/blog med det.
 					<br><br>
-					(Skriv mere om Ramslat)
+					(Skriv mere om Ramsalt)
 				</p>
 			</li>
 			<li class="point" tabindex="0" style="top: 33.34%">
@@ -64,10 +64,10 @@
 				<h4 class="en">2021</h4>
 				<h2 class="en">Tromso kommune, section for IT</h2>
 				<p class="en">
-					In the first half of vg2 I was at Tromso kommune in
-					professional practice. There I was doing first-line work such
-					as responding to support tickets in addition to re-installing
-					PCs operating systems.
+					In the first half of vg2, I was at Tromso kommune in
+					professional practice. While there I was doing first-line work
+					such as responding to support tickets in addition to re-
+					installing PCs operating systems.
 				</p>
 				<!--NB-->
 				<h4 class="nb">2021</h4>
@@ -99,10 +99,10 @@
 				<h4 class="en">2019</h4>
 				<h2 class="en">Journalist, iTromsø</h2>
 				<p class="en">
-					I was a journalist for iTromsø during pryo week where I got
-					to work much on my own. I interviewed a friend, was a
-					photographer for a kindergarten (or primary school, must
-					check), interviewed people on the street, etc.
+					I was a journalist for iTromsø during pryo week where I had
+					the opertunity to work independently. I interviewed a 
+					friend, was a photographer for a kindergarten (or primary
+					school, must check), interviewed people on the street, etc.
 				</p>
 				<!--NB-->
 				<h4 class="nb">2019</h4>
@@ -137,20 +137,20 @@
 				<h4 class="en">2014–2016</h4>
 				<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
 				<p class="en">
-					I participated in FIST LEGO Leaugewhich is a technology 
-					competitionin where you build and program acLego robot
-					in addition to do research projects. in 2014-2015 my team
-					reached the Scandinavian final and in 2015-2016 my team
+					I participated in FIRST LEGO Leauge. It is a technology 
+					competition where you build and program a Lego robot in
+					addition to doing research projects. In 2014-2015, my team
+					reached the Scandinavian final and in 2015-2016, my team
 					reached the international final. 
 					<br><br>
 					Regarding the competition, I have given lectures and
-					presentation in multiple conferences.
+					presentations in multiple conferences.
 				</p>
 				<!--NB-->
 				<h4 class="nb">2014–2016</h4>
 				<h2 class="nb">Teknologikonkurransen FIRST LEGO Leauge</h2>
 				<p class="nb">
-					Jeg var med i teknologikonkurransen FIST LEGO Leauge
+					Jeg var med i teknologikonkurransen FIRST LEGO Leauge
 					som er en konkurranse der du bygger og programmerer en
 					Lego robot i tillegg til å gjøre forskningsprosjekter. i 2014–
 					2015 kom laget mitt til den skandinaviske finalen og i 2015–
