--- a/experience/index.html
+++ b/experience/index.html
@@ -24,7 +24,7 @@
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
 		<div class="img-wrap">
-			<img src="/images/mountain.jpg" class="bg-img">
+			<img src="/images/Mountain.jpg" class="bg-img">
 		</div>
 		<ul class="timeline">
 			<li class="point" tabindex="0" style="top: 0%">
